--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/srm
 spring.datasource.username=postgres
-spring.datasource.password=dineshKUMAR2@
+spring.datasource.password=623703
 #server.port = 9090;
 Spring.datasource.driver-class-name = org.postgresql.Driver
